test: expand unit test coverage across services and controllers
Added and expanded 322 unit tests (0 failures) across service and
controller layers to increase combined code coverage toward 90% goal:

Services (Mockito unit tests):
- InboxServiceTest: 1 → 19 tests (search, filters, CRUD, targets)
- TitleServiceTest: 0 → 58 tests (eligibility, award, challenge, stats)
- MultiWrestlerFeudServiceTest: 0 → 42 tests (full feud lifecycle)
- ShowServiceTest: 8 → 36 tests (create, finalize, segments)
- BackstageActionServiceTest: 12 → 27 tests (all phases, spy rollDice)
- AccountServiceTest: expanded coverage

Controllers (Spring MockMvc integration tests):
- RivalryControllerTest: 1 → 25 tests (all endpoints)
- TitleControllerTest: 1 → 31 tests (all endpoints)
- SeasonControllerTest: 1 → 18 tests (all endpoints)
- ShowControllerTest: 2 → 18 tests (all endpoints)
- InjuryControllerTest: 1 → 27 tests (all endpoints)
- CampaignControllerTest: 5 → 21 tests (all endpoints)